adding the app details page

--- a/public/Appdata.json
+++ b/public/Appdata.json
@@ -4,7 +4,7 @@
     "title": "Photo Editor Pro",
     "companyName": "PixelSoft",
     "id": 1,
-    "description": "An advanced and professional photo editing application that offers powerful filters, AI-based enhancement tools, color correction, background removal, and creative effects suitable for both beginners and professionals.",
+    "description": "Photo Editor Pro is a comprehensive and professional photo editing application designed for both beginners and advanced users. It offers a wide range of powerful features, including AI-based enhancement tools that automatically improve photo quality, advanced filters for creative effects, and precise color correction options to make every image stand out. The app allows background removal for product photography, social media content, and creative projects, while providing layer-based editing for greater control over composition. Users can apply various artistic effects, adjust brightness, contrast, saturation, and sharpness with ease, and work with multiple file formats without losing quality. It also includes intuitive cropping, resizing, and rotation tools to ensure images are perfectly framed for any purpose. Photo Editor Pro offers seamless integration with popular cloud services, enabling effortless storage and sharing. Its user-friendly interface is designed to minimize the learning curve while still offering advanced features for experienced editors. Tutorials, tips, and community support allow users to explore creative possibilities, develop skills, and produce professional-quality images. Whether enhancing portraits, creating marketing materials, or experimenting with digital art, Photo Editor Pro equips users with the tools needed to bring their vision to life in a highly flexible and accessible environment.",
     "size": 45,
     "reviews": 1240,
     "ratingAvg": 4.5,
@@ -22,7 +22,7 @@
     "title": "Music Player X",
     "companyName": "SoundWave",
     "id": 2,
-    "description": "A modern music player that supports both offline and online playback, includes a built-in equalizer, playlist management, background play, and smooth audio performance.",
+    "description": "Music Player X is a modern music application designed for high-quality audio playback, both online and offline. It features a built-in equalizer with presets and manual adjustments, allowing users to fine-tune sound to their personal preferences. Users can manage playlists, shuffle and repeat tracks, and easily organize their music library. The app also supports multiple audio formats, ensuring compatibility with a wide range of files. Background play allows uninterrupted listening while using other apps, and smart recommendations suggest new tracks based on listening habits. Music Player X includes sleep timers, album artwork display, lyrics integration, and gesture controls for a smooth experience. Its intuitive interface ensures easy navigation, whether browsing by artist, album, or genre. For audiophiles, the app provides advanced audio settings like bass boost, virtual surround sound, and stereo widening. Integration with social media platforms allows sharing favorite tracks, playlists, and discovering trending music. The app is lightweight, responsive, and optimized to run smoothly on various devices. Whether for casual listeners or music enthusiasts, Music Player X offers a complete and personalized listening experience, making it easy to enjoy, explore, and share music anytime.",
     "size": 32,
     "reviews": 980,
     "ratingAvg": 4.2,
@@ -40,7 +40,7 @@
     "title": "Fitness Tracker",
     "companyName": "Healthify",
     "id": 3,
-    "description": "A complete fitness and health tracking app that helps users monitor workouts, daily steps, calories burned, heart activity, and long-term fitness progress with detailed insights.",
+    "description": "Fitness Tracker is a comprehensive health and wellness app designed to help users monitor and improve their physical activity and overall fitness. It tracks daily steps, calories burned, distance traveled, active minutes, and heart rate, providing clear insights into personal health goals. The app includes guided workouts for beginners and advanced users, customizable exercise routines, and progress tracking features. Users can monitor sleep patterns, hydration levels, and weight trends to maintain balanced health habits. Fitness Tracker integrates with wearable devices and smartwatches to provide accurate, real-time data. Personalized reminders motivate users to stay active and maintain consistency. The app also offers social features, allowing users to join challenges, share achievements, and compete with friends. Nutrition tracking is included to monitor calorie intake, macronutrients, and dietary habits. Detailed graphs and charts visualize progress over time, helping users make informed lifestyle decisions. Fitness Tracker emphasizes long-term wellness by offering tips, educational content, and health insights. Whether training for a marathon, improving daily activity, or maintaining a balanced lifestyle, Fitness Tracker provides a complete toolkit to guide users on their fitness journey, encouraging consistency, motivation, and healthy living habits.",
     "size": 28,
     "reviews": 2100,
     "ratingAvg": 4.7,
@@ -58,7 +58,7 @@
     "title": "Note Keeper",
     "companyName": "WriteWell",
     "id": 4,
-    "description": "A lightweight and secure note-taking application designed for organizing ideas, saving important information, syncing across devices, and ensuring privacy with encryption support.",
+    "description": "Note Keeper is a versatile note-taking application designed to help users capture, organize, and manage their ideas, tasks, and important information efficiently. It provides rich text formatting, tagging, and categorization options to keep notes structured and easy to navigate. Users can create to-do lists, checklists, and reminders to manage daily tasks and deadlines effectively. The app supports multimedia attachments, allowing images, voice notes, and documents to be added to notes for enhanced context. Cloud synchronization ensures that notes are accessible across multiple devices, while offline mode guarantees productivity even without internet connectivity. Note Keeper offers advanced search functionality, enabling users to find notes quickly using keywords, tags, or filters. Security features like password protection and encryption ensure that sensitive information remains private. The intuitive interface is designed to minimize friction and maximize efficiency, providing a smooth and user-friendly experience. Note Keeper is suitable for students, professionals, and anyone who needs to manage personal or work-related information. With templates, reminders, and collaboration features, it becomes a reliable tool for organizing ideas, planning projects, and keeping track of important details in a structured and secure manner.",
     "size": 15,
     "reviews": 650,
     "ratingAvg": 4.0,
@@ -76,7 +76,7 @@
     "title": "Weather Now",
     "companyName": "SkyLabs",
     "id": 5,
-    "description": "A reliable weather forecasting app that provides real-time updates, hourly and weekly forecasts, severe weather alerts, and location-based climate information.",
+    "description": "Weather Now is a reliable weather forecasting application providing accurate, real-time information about current conditions, hourly and daily forecasts, and severe weather alerts. Users can view temperature, humidity, wind speed, precipitation, and UV index for their location and other selected cities. The app offers interactive weather maps, radar imagery, and satellite visuals to track storms and monitor climate patterns effectively. Weather Now includes customizable notifications for rain, snow, or extreme conditions, helping users plan their day safely. It supports multiple languages and units, catering to a global audience. The interface is intuitive, with clear visuals and graphs for easy understanding of weather trends. Users can save favorite locations, access historical weather data, and get seasonal insights to prepare for long-term planning. Integration with widgets allows quick access to forecasts directly from the home screen. Weather Now emphasizes accessibility, precision, and user engagement, making it a comprehensive tool for individuals, travelers, and outdoor enthusiasts who rely on accurate weather information to make informed decisions and stay prepared for changing conditions.",
     "size": 18,
     "reviews": 1320,
     "ratingAvg": 4.3,
@@ -94,7 +94,7 @@
     "title": "Language Learner",
     "companyName": "EduSpark",
     "id": 6,
-    "description": "An interactive language learning platform that offers daily lessons, pronunciation practice, vocabulary building, grammar exercises, and progress tracking for multiple languages.",
+    "description": "Language Learner is an interactive application designed to help users learn new languages effectively and engagingly. The app offers daily lessons, pronunciation practice, vocabulary building exercises, and grammar tutorials for multiple languages. Users can practice speaking, listening, reading, and writing skills through interactive exercises, quizzes, and flashcards. The app includes AI-powered speech recognition to provide real-time feedback on pronunciation and fluency. Gamification elements, such as streaks, points, and challenges, keep learners motivated and engaged. Progress tracking allows users to monitor their improvement over time and identify areas that need more attention. The app also provides cultural context, idiomatic expressions, and practical phrases for real-world usage. Offline mode ensures learning can continue without internet connectivity, while cloud syncing saves progress across devices. Language Learner is suitable for beginners, intermediate, and advanced learners, offering personalized lesson plans based on skill level and learning goals. With a combination of technology, engaging content, and structured learning paths, it helps users acquire language skills efficiently and confidently, whether for travel, career advancement, or personal enrichment.",
     "size": 52,
     "reviews": 1780,
     "ratingAvg": 4.6,
@@ -112,7 +112,7 @@
     "title": "Task Manager",
     "companyName": "Productive Inc",
     "id": 7,
-    "description": "A productivity-focused task management tool that helps users organize daily tasks, set priorities, track deadlines, and improve overall work efficiency.",
+    "description": "Task Manager is a productivity-focused application designed to help users organize daily tasks, set priorities, track deadlines, and manage projects efficiently. It offers features such as to-do lists, reminders, subtasks, and recurring tasks to ensure nothing is missed. The app includes visual calendars, kanban boards, and progress tracking to give users a clear overview of their workload. Users can categorize tasks with labels, tags, and priorities to manage work systematically. Collaboration tools allow team members to share tasks, assign responsibilities, and communicate within the app, streamlining teamwork. Notifications and smart alerts help users stay on top of deadlines and important milestones. The app supports offline mode and cloud synchronization, enabling seamless task management across multiple devices. Analytics and reporting features provide insights into productivity trends and areas for improvement. Task Manager integrates with other tools such as calendars, email, and cloud storage to simplify workflow. With a user-friendly interface, customizable layouts, and efficiency-focused design, Task Manager is ideal for professionals, students, and anyone looking to improve personal or team productivity by managing tasks effectively and achieving goals consistently.",
     "size": 22,
     "reviews": 860,
     "ratingAvg": 4.1,
@@ -124,70 +124,5 @@
       { "name": "4 star", "count": 300 },
       { "name": "5 star", "count": 270 }
     ]
-  },
-  {
-    "image": "https://picsum.photos/200?8",
-    "title": "Budget Planner",
-    "companyName": "MoneyMind",
-    "id": 8,
-    "description": "A smart financial planning app that allows users to track expenses, manage monthly budgets, analyze spending habits, and improve long-term financial control.",
-    "size": 35,
-    "reviews": 1120,
-    "ratingAvg": 4.4,
-    "downloads": "4m",
-    "ratings": [
-      { "name": "1 star", "count": 45 },
-      { "name": "2 star", "count": 75 },
-      { "name": "3 star", "count": 160 },
-      { "name": "4 star", "count": 360 },
-      { "name": "5 star", "count": 480 }
-    ]
-  },
-  {
-    "image": "https://picsum.photos/200?9",
-    "title": "Video Editor Lite",
-    "companyName": "ClipForge",
-    "id": 9,
-    "description": "A powerful yet easy-to-use video editing application that supports trimming, transitions, effects, music overlays, and quick exporting for social media platforms.",
-    "size": 120,
-    "reviews": 2450,
-    "ratingAvg": 4.8,
-    "downloads": "15m",
-    "ratings": [
-      { "name": "1 star", "count": 80 },
-      { "name": "2 star", "count": 120 },
-      { "name": "3 star", "count": 200 },
-      { "name": "4 star", "count": 650 },
-      { "name": "5 star", "count": 1400 }
-    ]
-  },
-  {
-    "image": "https://picsum.photos/200?10",
-    "title": "Secure VPN",
-    "companyName": "NetShield",
-    "id": 10,
-    "description": "A fast and secure VPN service designed to protect user privacy, encrypt internet traffic, bypass geo-restrictions, and ensure safe browsing on public networks.",
-    "size": 60,
-    "reviews": 1980,
-    "ratingAvg": 4.6,
-    "downloads": "8m",
-    "ratings": [
-      { "name": "1 star", "count": 70 },
-      { "name": "2 star", "count": 100 },
-      { "name": "3 star", "count": 180 },
-      { "name": "4 star", "count": 600 },
-      { "name": "5 star", "count": 1030 }
-    ]
-  },
-
-  { "image": "https://picsum.photos/200?11", "title": "PDF Scanner", "companyName": "DocuTech", "id": 11, "description": "A document scanning application that allows users to scan papers, convert them to PDFs, apply OCR, and share files securely.", "size": 25, "reviews": 740, "ratingAvg": 4.2, "downloads": "3m", "ratings": [ { "name": "1 star", "count": 40 }, { "name": "2 star", "count": 70 }, { "name": "3 star", "count": 130 }, { "name": "4 star", "count": 260 }, { "name": "5 star", "count": 240 } ] },
-  { "image": "https://picsum.photos/200?12", "title": "Meditation Plus", "companyName": "MindCare", "id": 12, "description": "A calming meditation and mindfulness app offering guided sessions, breathing exercises, sleep sounds, and stress relief programs.", "size": 40, "reviews": 1650, "ratingAvg": 4.7, "downloads": "7m", "ratings": [ { "name": "1 star", "count": 50 }, { "name": "2 star", "count": 80 }, { "name": "3 star", "count": 150 }, { "name": "4 star", "count": 500 }, { "name": "5 star", "count": 870 } ] },
-  { "image": "https://picsum.photos/200?13", "title": "Expense Tracker", "companyName": "FinTrack", "id": 13, "description": "An easy-to-use expense tracking app that helps users record daily spending, categorize expenses, and view monthly financial reports.", "size": 30, "reviews": 920, "ratingAvg": 4.3, "downloads": "4m", "ratings": [ { "name": "1 star", "count": 45 }, { "name": "2 star", "count": 75 }, { "name": "3 star", "count": 160 }, { "name": "4 star", "count": 300 }, { "name": "5 star", "count": 340 } ] },
-  { "image": "https://picsum.photos/200?14", "title": "QR Scanner", "companyName": "QuickScan", "id": 14, "description": "A fast and lightweight QR and barcode scanner that supports instant scanning, history tracking, and secure link previews.", "size": 12, "reviews": 580, "ratingAvg": 4.1, "downloads": "2m", "ratings": [ { "name": "1 star", "count": 35 }, { "name": "2 star", "count": 65 }, { "name": "3 star", "count": 120 }, { "name": "4 star", "count": 200 }, { "name": "5 star", "count": 160 } ] },
-  { "image": "https://picsum.photos/200?15", "title": "Cloud Storage", "companyName": "DataBox", "id": 15, "description": "A secure cloud storage solution that allows users to back up files, sync data across devices, and share content with ease.", "size": 80, "reviews": 2300, "ratingAvg": 4.5, "downloads": "11m", "ratings": [ { "name": "1 star", "count": 90 }, { "name": "2 star", "count": 130 }, { "name": "3 star", "count": 220 }, { "name": "4 star", "count": 700 }, { "name": "5 star", "count": 1160 } ] },
-  { "image": "https://picsum.photos/200?16", "title": "Calendar Pro", "companyName": "TimeFlow", "id": 16, "description": "A smart calendar app with reminders, scheduling tools, event syncing, and productivity-enhancing features.", "size": 26, "reviews": 810, "ratingAvg": 4.2, "downloads": "3m", "ratings": [ { "name": "1 star", "count": 50 }, { "name": "2 star", "count": 70 }, { "name": "3 star", "count": 140 }, { "name": "4 star", "count": 280 }, { "name": "5 star", "count": 270 } ] },
-  { "image": "https://picsum.photos/200?17", "title": "Password Vault", "companyName": "SecureKey", "id": 17, "description": "A secure password manager that stores credentials safely, generates strong passwords, and supports biometric authentication.", "size": 20, "reviews": 1900, "ratingAvg": 4.8, "downloads": "9m", "ratings": [ { "name": "1 star", "count": 40 }, { "name": "2 star", "count": 60 }, { "name": "3 star", "count": 120 }, { "name": "4 star", "count": 500 }, { "name": "5 star", "count": 1180 } ] },
-  { "image": "https://picsum.photos/200?18", "title": "News Daily", "companyName": "InfoNow", "id": 18, "description": "A daily news application delivering breaking news, personalized content, and in-depth articles from trusted sources.", "size": 34, "reviews": 1400, "ratingAvg": 4.1, "downloads": "6m", "ratings": [ { "name": "1 star", "count": 90 }, { "name": "2 star", "count": 120 }, { "name": "3 star", "count": 260 }, { "name": "4 star", "count": 500 }, { "name": "5 star", "count": 430 } ] },
-  { "image": "https://picsum.photos/200?19", "title": "Sleep Tracker", "companyName": "DreamLab", "id": 19, "description": "A sleep tracking application that monitors sleep cycles, provides insights, and offers tips to improve sleep quality.", "size": 24, "reviews": 1100, "ratingAvg": 4.4, "downloads": "5m", "ratings": [ { "name": "1 star", "count": 50 }, { "name": "2 star", "count": 80 }, { "name": "3 star", "count": 170 }, { "name": "4 star", "count": 400 }, { "name": "5 star", "count": 400 } ] },
-  { "image": "https://picsum.photos/200?20", "title": "E-Book Reader", "companyName": "Readify", "id": 20, "description": "A digital book reading app that supports multiple formats, night mode, bookmarks, and customizable reading preferences.", "size": 55, "reviews": 1750, "ratingAvg": 4.6, "downloads": "7m", "ratings": [ { "name": "1 star", "count": 60 }, { "name": "2 star", "count": 90 }, { "name": "3 star", "count": 160 }, { "name": "4 star", "count": 520 }, { "name": "5 star", "count": 920 } ] }
+  }
 ]
